[package]
name = "fivem_gps"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.0-rc.3", features = ["dynamic_linking"]}
bevy-inspector-egui = "0.28.1"
bevy_dylib = { version = "0.15.0-rc.3" }
pathfinding = "4.13.1"
quick-xml = { version = "0.37.2", features = ["serde", "serde-types", "serialize"] }
serde = { version = "1.0.217", features = ["derive"] }
serde-xml-rs = "0.6.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
